Fix bug that caused images to take more space on safari

--- a/assets/scss/partials/_resume-cards.scss
+++ b/assets/scss/partials/_resume-cards.scss
@@ -40,8 +40,9 @@
   @media only screen and (max-width: 960px) {
     .khruu-experience-card {
       grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr;
       img {
-        display: block;
+        display: flex;
         max-width: 10rem;
         margin: 0 auto;
       }
